fix font-size in footer menu on mobile

--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -18,5 +18,7 @@
   .footer__link {
     margin-right: 0;
     margin-bottom: 32px;
+    font-size: 24px;
+    line-height: 1;
   }
 }
